# AndroidAudioVideoStudy

./: .gitignore  README.md  build.gradle  settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/zyp/androidaudiovideostudy/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: test.flv  test.h264
app/src/main/assets/arm/: aaa.pcm  video_480x360.h264  video_audio.aac  video_audio.m4a
app/src/main/cpp/: lame-lib.cpp  native-lib.cpp
app/src/main/cpp/libmp3lame/: util.h
app/src/main/java/com/zyp/androidaudiovideostudy/: App.kt  AudioLameNative.java  FileHelper.java  LameNative.java  LiblameActivity.java  LibmadActivity.java  MainActivity.java  MainActivity.kt  RecMicToMp3.java
app/src/main/java/com/zyp/av/: App.kt  MainActivity.kt
app/src/main/java/com/zyp/av/pref/: Pref.kt  (+1 more)
app/src/main/res/layout/: activity_audio.xml  activity_camera.xml  activity_camera2.xml  activity_camera_media_codec.xml  activity_camera_open_glactivity.xml  activity_camera_opengl_activity.xml  activity_camera_opengl_filter_activity.xml  activity_camera_opengl_lookup_activity.xml  activity_camera_rtmp.xml  activity_camera_texture_activity.xml  activity_exo_player.xml  activity_fdk_aac_activity.xml  activity_ffmpeg.xml  activity_fmod_effect.xml  activity_glsurfaceview.xml  activity_liblame.xml  activity_libmad.xml  activity_main.xml  activity_media_codec.xml  activity_media_player.xml  activity_rgb_view.xml  activity_rgba_player.xml  activity_surface_view.xml  activity_video_view.xml  activity_x264.xml  activity_yuv_camera.xml  activity_yuv_test.xml  assimp_layout.xml  main_item.xml  style_adapter_item.xml
app/src/main/res/raw/: lookup_frag.frag
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/zyp/androidaudiovideostudy/: ExampleUnitTest.java
ffmpeglib/: CMakeLists.txt
ffmpeglib/src/androidTest/java/com/zyp/ffmpeglib/: ExampleInstrumentedTest.kt
ffmpeglib/src/main/cpp/: ffmpeglib.cpp
ffmpeglib/src/main/java/com/zyp/ffmpeglib/: FFmpegLib.kt
libassimp/: build.gradle
libassimp/src/androidTest/java/com/zyp/assimp/: ExampleInstrumentedTest.kt
libassimp/src/main/: AndroidManifest.xml
libassimp/src/main/cpp/: CMakeLists.txt  assimp_lib.cpp
libassimp/src/main/cpp/assimp/include/assimp/: revision.h
libassimp/src/main/cpp/jniCalls/: assimpActivity.cpp  gestureClass.cpp  myGLRenderer.cpp
libassimp/src/main/cpp/nativeCode/common/: assimpLoader.cpp  myGLFunctions.cpp  myShader.cpp
libassimp/src/main/cpp/nativeCode/modelAssimp/: modelAssimp.cpp
libassimp/src/main/java/com/zyp/assimp/: AssimpLib.kt
libassimp/src/test/java/com/zyp/assimp/: ExampleUnitTest.kt
libfaac/: .gitignore  CMakeLists.txt  build.gradle
libfaac/src/main/cpp/: faac_lib.cpp
libfaac/src/main/java/com/zyp/faaclib/: FaacLib.kt
libfdk-aac/: CMakeLists.txt
libfdk-aac/src/main/: AndroidManifest.xml
libfdk-aac/src/main/cpp/: fdk_aac_lib.cpp
libfdk-aac/src/main/java/com/zyp/fdkaaclib/: FdkAACLib.kt
libffmpeg/: CMakeLists.txt  README.md  build.gradle
libffmpeg/libs/include/: ffmpeg.c
libffmpeg/libs/include/libavutil/: version.h
libffmpeg/src/main/: AndroidManifest.xml
libffmpeg/src/main/cpp/: CMakeLists.txt  NativewindRender.cpp  ffmpeglib.cpp
libffmpeg/src/main/cpp/common/: common.c
libffmpeg/src/main/cpp/ffmpeg/: AVPacket_buffer.c  ffmpeg.c  ffmpeg_player.c  ffmpeg_util.c  sync_player.c  zzr_ffmpeg_player.c  zzr_ffmpeg_util.c
libffmpeg/src/main/cpp/ffmpeg/include/: config.h
libffmpeg/src/main/cpp/push/: rtmp_push.c
libffmpeg/src/main/java/com/zyp/ffmpeglib/: ANativeWindowRender.kt  FFVideoPlayer.java  FFmpegLib.kt
libffmpeg/src/test/java/com/zyp/ffmpeglib/: ExampleUnitTest.kt
libfmod/src/androidTest/java/com/zyp/fmod/: ExampleInstrumentedTest.java
libfmod/src/main/: AndroidManifest.xml
libfmod/src/main/cpp/: CMakeLists.txt  fmod.cpp
libfmod/src/main/cpp/fmod/: common.cpp  common.h  common_platform.cpp  effect_sound.cpp  play_sound.cpp
libfmod/src/main/java/com/zyp/fmod/: NativeLib.java
libfmod/src/test/java/com/zyp/fmod/: ExampleUnitTest.java
liblame/: .gitignore  CMakeLists.txt  build.gradle
liblame/src/androidTest/java/com/zyp/liblame/: ExampleInstrumentedTest.java
liblame/src/main/: AndroidManifest.xml
liblame/src/main/cpp/: NativeLameMP3Encoder.cpp
liblame/src/main/java/com/zyp/liblame/: NativeLameMP3Encoder.java
liblame/src/test/java/com/zyp/liblame/: ExampleUnitTest.java
libmad/: .gitignore  CMakeLists.txt  build.gradle
libmad/src/androidTest/java/com/zyp/libmad/: ExampleInstrumentedTest.java
libmad/src/main/: AndroidManifest.xml
libmad/src/main/cpp/: FileSystem.c  FileSystem.h  NativeMP3Decoder.c  NativeMP3Decoder.h
libmad/src/main/cpp/external-libmad/: Android.mk  minimad.c
libmad/src/main/java/com/zyp/libmad/: NativeMP3Decoder.java
libmad/src/main/res/values/: strings.xml
libmad/src/test/java/com/zyp/libmad/: ExampleUnitTest.java
libopencv/: README.md  build.gradle
libopencv/src/main/: AndroidManifest.xml
libopencv/src/main/aidl/com/zyp/opencv/: IMyAidlInterface.aidl
libopencv/src/main/cpp/: CMakeLists.txt  opencv.cpp
libopencv/src/main/java/com/zyp/opencv/: NativeLib.java
librtmp/: .gitignore  CMakeLists.txt
librtmp/src/main/: AndroidManifest.xml
librtmp/src/main/cpp/: rtmp_core.c  rtmp_handle.cpp  rtmp_lib.cpp
librtmp/src/main/java/com/zyp/rtmplib/: RtmpHandle.kt  RtmpLib.kt
librtmp/src/main/java/com/zyp/rtmplib/flv/: AnnexbHelper.java  FlvPacker.java  FlvPackerHelper.java  Packer.java
librtmp/src/main/java/com/zyp/rtmplib/flv/amf/: AmfArray.java  AmfBoolean.java  AmfData.java  AmfDecoder.java  AmfMap.java  AmfNull.java  AmfNumber.java  AmfObject.java  AmfString.java  AmfType.java  AmfUndefined.java  Util.java
libx264/: .gitignore
libx264/src/main/cpp/: x264_encode_lib.cpp
libyuv/: CMakeLists.txt
libyuv/src/main/: AndroidManifest.xml
libyuv/src/main/cpp/: yuv_convert.c  yuv_convert.h  yuv_lib.cpp
x264lib/: CMakeLists.txt
x264lib/src/main/: AndroidManifest.xml
x264lib/src/main/cpp/: x264_encode_lib.cpp
(+301 files in other folders)
